# ASCII-Snake

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: grid.h  segment.h  snake.h  util.h
src/: grid.c  main.c  segment.c  snake.c  util.c
